# fpl_draft

./: dashboard.py  fpl-draft-db.db  pyproject.toml
.streamlit/: config.toml
data_viz/: data_viz.py
pages/: 1_Scouting_Tools.py
scrapers/: data_wrangling.py  fbrefscraper.py  scraper.py
