[tool.poetry]
name = "fpl scraper"
version = "0.1.0"
description = "scrapes data from fpl and draft game modes"
authors = ["NicolajBH <97743181+NicolajBH@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.17"
lxml = "^4.9.3"
selectolax = "^0.3.14"
pandas = "^2.0.3"
httpx = "^0.24.1"
cdifflib = "^1.2.6"
beautifulsoup4 = "^4.12.2"
sqlalchemy = "^2.0.20"
streamlit = "^1.25.0"
matplotlib = "^3.7.2"
mplsoccer = "^1.2.1"
highlight-text = "^0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
